BUG: some content out of viewport

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -61,8 +61,11 @@ html {
   box-sizing: border-box;
   font-size: 62.5%;
   background-color: var(--primary-color2);
-  width: 100%;
-  height: 100%;
+
+  width: 100vw;
+  height: 100vw;
+
+  overflow: hidden;
 }
 
 *,
